Migrate to java 17, fix #294 (#300)